--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,23 @@ a {
     color: black;
 }
 
-h2, span, .project-span {
+h1 {
+    display: inline-block;   
+}
+
+h2, .project-span {
     display: inline-block;
     padding: 0.2em;
+}
+
+.hello {
+    position: relative;
+    font-size: 1.5em;
+    top: 0.5em;
+}
+
+.hello-span {
+    padding: 0.7em;
 }
 
 .bio {
@@ -88,9 +102,6 @@ h2, span, .project-span {
 
 .icon-github {
     padding-left: 0.2em;
-}
-
-.icon-github {
     font-size: 1.5em;
 }
 
@@ -252,6 +263,9 @@ h2, span, .project-span {
 
     main, .bio, .div {
         width: auto;
+    }
+
+    .bio, .div {
         max-width: 60em;
         min-width: 25em;
     }
@@ -260,16 +274,16 @@ h2, span, .project-span {
         margin-top: 1em;
     }
 
-    .div-wiki, .div-gal, .div-sv, .div-ref, .div-res {
+    .div-wiki, .div-gal, .div-sv, .div-ref, .div-res, .div-pic {
         left: 0em;
         top: 0em;
         margin-bottom: 1.7em;
     }
 
     .div-pic {
-        top: -55em;
-        margin-bottom: -55em;
-        visibility: hidden;
+        width: {
+            10em;
+        }
     }
 
     .overlay {
