--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ h2, .project-span {
 .div {
     box-sizing: border-box;
     border: 0.1em black solid;
-    background-color: #fff6a2;
+    background-color:#DCDCDC	;
     position: relative;
     box-shadow: 0.3em 0.3em 0.5em;
     margin-right: 0.7em;
@@ -114,7 +114,7 @@ h2, .project-span {
 .website-image {
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .overlay {
