--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,8 @@ h2, .project-span {
 .each-website {
     position: relative;
     border-top: 0.1em black solid;
+    width: 100%;
+    height: 100%;
 }
 
 .website-image {
@@ -128,6 +130,8 @@ h2, .project-span {
     opacity: 0;
     transition: .5s ease;
     padding: 0.7em;
+    width: 100%;
+    height: 100%;
 }
 
 .each-website:hover .overlay {
