--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ h2, .project-span {
 .bio {
     position: relative;
     width: 21em;
-    top: -1em;
+    top: -0.8em;
 }
 
 .div {
@@ -130,8 +130,6 @@ h2, .project-span {
     opacity: 0;
     transition: .5s ease;
     padding: 0.7em;
-    width: 100%;
-    height: 100%;
 }
 
 .each-website:hover .overlay {
@@ -148,7 +146,9 @@ h2, .project-span {
 }
 
 .hello {
-    width: 2em;
+    width: 1.5em;
+    padding-bottom: 0.2em;
+    padding-left: 0.4em;
 }
 
 @media (max-width: 1400px) {
