--- a/styles.css
+++ b/styles.css
@@ -104,19 +104,19 @@ h2, .project-span {
 
 .icon-github {
     font-size: 1.5em;
+    margin-left: 0.1em;
 }
 
 .each-website {
     position: relative;
     border-top: 0.1em black solid;
-    width: 100%;
-    height: 100%;
 }
 
 .website-image {
     display: block;
     width: 100%;
-    height: 100%;
+    min-width: 100%;
+    height: auto;
 }
 
 .overlay {
