attempt to fix chrome image width issue

--- a/styles.css
+++ b/styles.css
@@ -115,8 +115,8 @@ h2, .project-span {
 .website-image {
     display: block;
     width: 100%;
-    min-width: 100%;
     height: auto;
+    object-fit: cover;
 }
 
 .overlay {
