--- a/styles.css
+++ b/styles.css
@@ -115,8 +115,7 @@ h2, .project-span {
 .website-image {
     display: block;
     width: 100%;
-    height: auto;
-    object-fit: fill;
+    height: 100%;
 }
 
 .overlay {
