--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,8 @@ h2, .project-span {
 .each-website {
     position: relative;
     border-top: 0.1em black solid;
+    width: 100%;
+    height: 100%;
 }
 
 .website-image {
