--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ h2, .project-span {
     left: 35em;
     top: -15em;
     margin-bottom: -15em;
+    z-index: 6;
 }
 
 .div-gal {
@@ -94,6 +95,7 @@ h2, .project-span {
     left: 2em;
     top: -10em;
     margin-bottom: -10em;
+    z-index: 5;
 }
 
 .div-sv {
@@ -101,6 +103,7 @@ h2, .project-span {
     left: 53em;
     top: -22em;
     margin-bottom: -22em;
+    z-index: 4;
 }
 
 .div-ref {
@@ -108,6 +111,7 @@ h2, .project-span {
     left: 6em;
     top: -6em;
     margin-bottom: -6em;
+    z-index: 3;
 }
 
 .div-res {
@@ -115,6 +119,7 @@ h2, .project-span {
     left: 43em;
     top: -5em;
     margin-bottom: -10em;
+    z-index: 2;
 }
 
 .div-pic {
@@ -122,6 +127,7 @@ h2, .project-span {
     left: 28.5em;
     top: -20em;
     margin-bottom: -13em;
+    z-index: 1;
 }
 
 .icon-span, .icon-tech {
