--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,10 @@ h2, .project-span {
 .hello {
     position: relative;
     font-size: 1.5em;
+    width: 1.5em;
     top: 0.5em;
-}
-
-.hello-span {
-    padding: 0.65em;
+    padding-bottom: 0.2em;
+    padding-left: 0.4em;
 }
 
 .bio {
@@ -51,7 +50,6 @@ h2, .project-span {
     box-shadow: 0.3em 0.3em 0.5em;
     margin-right: 0.7em;
 }
-
 
 .each-website {
     position: relative;
@@ -79,7 +77,7 @@ h2, .project-span {
 
 .each-website:hover .overlay {
     opacity: 0.9;
-    cursor: pointer;
+    cursor: ;
 }
 
 .div-wiki {
@@ -124,17 +122,14 @@ h2, .project-span {
     margin-bottom: -13em;
 }
 
-.icon-span, .icon-tech {
-    font-size: 2em;
-}
-
 .icon-tech {
-    padding-right: 0.2em;
+    font-size: 2em;
+    margin-right: 0.2em;
 }
 
-.icon-github {
+.icon-project-span {
     font-size: 1.5em;
-    margin-left: 0.1em;
+    margin-right: 0.2em;
 }
 
 .line-margin-bottom {
@@ -145,10 +140,8 @@ h2, .project-span {
     margin-top: 0.5em;
 }
 
-.hello {
-    width: 1.5em;
-    padding-bottom: 0.2em;
-    padding-left: 0.4em;
+.padding-left {
+    padding-left: 0.2em;
 }
 
 @media (max-width: 1400px) {
