--- a/styles.css
+++ b/styles.css
@@ -372,7 +372,7 @@ h2, .project-span {
     }
 }
 
-@media (max-width: 925px)/*, (hover: none)*/ {
+@media (max-width: 925px), (hover: none) {
 
     main, .bio, .div {
         width: auto;
