--- a/styles.css
+++ b/styles.css
@@ -11,22 +11,21 @@ main {
     overflow: hidden;
 }
 
-p {
-    font-size: 1.2em;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-
-h1 {
-    display: inline-block;   
+h1, p {
+    display: inline;
+    font-size: 1.2em; 
+    font-weight: normal; 
 }
 
 h2, .project-span {
     display: inline-block;
     padding: 0.15em;
+    font-weight: normal; 
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 .hello {
@@ -40,7 +39,7 @@ h2, .project-span {
 
 .bio {
     position: relative;
-    width: 21em;
+    width: 20em;
     top: -0.8em;
 }
 
