--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ main {
 }
 
 h1, p {
-    display: inline;
     font-size: 1.2em; 
     font-weight: normal; 
 }
@@ -41,6 +40,10 @@ a {
     position: relative;
     width: 20em;
     top: -0.8em;
+}
+
+.bio-inline {
+    display: inline;
 }
 
 .div {
